--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 &#127760 - Hello (Gia)!
 </p>
 <p><a href="authr.html">Authors</a></p>
-<p><a href="dummy.html">go to second page</a></p>
+<p><a href="dummy.html">go to second pages</a></p>
 </body>
 </html>
